<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/ecoback"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#FFE9E9"
        android:layout_marginBottom="560dp"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vector"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/flowerimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flowerimage"
        android:layout_marginTop="24dp"
        android:layout_marginStart="195dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/pointimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pointimage"
        android:layout_marginTop="190dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@+id/ecoback"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33.37dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="53dp"
        android:text="@string/some_daily"
        android:textAppearance="@style/echoment"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/ecolife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/some_eco"
        android:textAppearance="@style/echoment"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="@id/daily"
        app:layout_constraintStart_toStartOf="parent" />






    <TextView
        android:id="@+id/whatismypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="190dp"
        android:text="@string/whatismypoint"
        android:textAppearance="@style/whatisyourpoint"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="@+id/ecoback"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="192dp"
        android:text="312 Pt"
        android:textAppearance="@style/whatisyourpoint"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="@+id/ecoback"
        app:layout_constraintStart_toEndOf="@id/whatismypoint" />

    <ImageView
        android:id="@+id/menubar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/_markbackground"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/homebutton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="35dp"
        app:srcCompat="@drawable/homebutton"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/co2button"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/baseline_co2_24"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/homebutton"/>

    <ImageView
        android:id="@+id/marketbutton"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/market"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/co2button"/>

    <ImageView
        android:id="@+id/optionbutton"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/option"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/marketbutton"/>











</androidx.constraintlayout.widget.ConstraintLayout>