<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/co2back"
        android:layout_width="360dp"
        android:layout_height="260dp"
        android:layout_marginBottom="320dp"
        android:background="#CCE0B8"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/vector3"
        android:layout_width="360dp"
        android:layout_height="260dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_3" />


    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33.37dp"
        android:gravity="top"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:gravity="top"
        android:text="@string/some_daily"
        android:textAppearance="@style/echoment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/ecolife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:gravity="top"
        android:text="@string/some_eco"
        android:textAppearance="@style/echoment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/daily" />

    <LinearLayout
        android:id="@+id/rectangle_1"
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rectangle_1"
        android:elevation="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/daily">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rectangle_2"
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="265dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rectangle_1"
        android:elevation="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/daily">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_1"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="395dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rectangle_1"
        android:elevation="1dp"
        android:text="공과금에 고지서 입력하기"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/daily" />


    <ImageView
        android:id="@+id/flowerimage"
        android:layout_width="194dp"
        android:layout_height="232dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tree1" />

    <ImageView
        android:id="@+id/menubar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="1"
        app:srcCompat="@drawable/_markbackground" />

    <ImageView
        android:id="@+id/homebutton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:srcCompat="@drawable/homebutton" />

    <ImageView
        android:id="@+id/co2button"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/homebutton"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:srcCompat="@drawable/baseline_co2_24" />

    <ImageView
        android:id="@+id/marketbutton"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/co2button"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:srcCompat="@drawable/market" />

    <ImageView
        android:id="@+id/optionbutton"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/marketbutton"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:srcCompat="@drawable/option" />


</androidx.constraintlayout.widget.ConstraintLayout>