<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/vectorback"
        android:layout_width="11.3dp"
        android:layout_height="21.3dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/vectorback"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/inputco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="탄소배출량 입력"
        android:textColor="#5B9DFF"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/vectorback"
        app:layout_constraintTop_toTopOf="@id/vectorback"
        app:layout_constraintBottom_toBottomOf="@id/vectorback"/>

    <TextView
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="완료"
        android:textColor="#5B9DFF"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/vectorback"
        app:layout_constraintBottom_toBottomOf="@id/vectorback"/>

    <FrameLayout
        android:id="@+id/inputrectangle_1"
        android:layout_width="400dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rectangle_1"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- 여기에 각 View 요소와 그 위치를 지정하는 속성을 추가 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="전기"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="가스"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="55dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="수도"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="95dp"
            android:layout_marginStart="30dp"/>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/inputrectangle_2"
        android:layout_width="400dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/rectangle_1"
        android:elevation="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="사용량"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="요금"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="85dp"
            android:layout_marginStart="30dp"/>

        <ImageView
            android:id="@+id/cameravector"
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:layout_marginStart="340dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="1"
            app:srcCompat="@drawable/cameravector" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/inputrectangle_3"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/rectangle_1"
        android:elevation="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcomeco2"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needtree"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="20dp"
            android:layout_marginStart="260dp"/>




        <View
        android:id="@+id/rectangle_6"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_6"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="#000000"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="160dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumco2"
            android:textAppearance="@style/sumco2"
            android:layout_gravity="center" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="210dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcomeco2"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="230dp"
            android:layout_marginStart="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needtree"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="230dp"
            android:layout_marginStart="260dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="#000000"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="숫자로 입력"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="55dp"
            android:layout_marginStart="260dp"
            android:textColor="#d0d0d0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="숫자로 입력"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="55dp"
            android:layout_marginStart="60dp"
            android:textColor="#d0d0d0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="숫자로 입력"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="265dp"
            android:layout_marginStart="260dp"
            android:textColor="#d0d0d0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="숫자로 입력"
            android:textAppearance="@style/needtree"
            android:layout_marginTop="265dp"
            android:layout_marginStart="60dp"
            android:textColor="#d0d0d0"/>




    </FrameLayout>






    <ImageView
        android:id="@+id/menubar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/_markbackground"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/homebutton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="35dp"
        app:srcCompat="@drawable/homebutton"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/co2button"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/baseline_co2_24"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/homebutton"/>

    <ImageView
        android:id="@+id/marketbutton"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/market"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/co2button"/>

    <ImageView
        android:id="@+id/optionbutton"
        android:layout_width="36dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="100dp"
        app:srcCompat="@drawable/option"
        app:layout_constraintTop_toTopOf="@id/menubar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/marketbutton"/>



</androidx.constraintlayout.widget.ConstraintLayout>